--- a/src/assets/styles/cmps/_board.scss
+++ b/src/assets/styles/cmps/_board.scss
@@ -1,6 +1,8 @@
 .board {
+    margin-left: 30px;
+
     &.board-controller-pinned {
-        margin-left: 30px; //open:225px
+        margin-left: 225px;
     }
 
     height: 100%;
