--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -49,7 +49,7 @@
 
             .group-title {
                 outline: none;
-                
+
                 &:hover {
                     padding: 0 5px;
                     outline: dashed 1px rgb(106, 106, 106);
@@ -84,7 +84,7 @@
 
 .btns-modal {
     width: 264px;
-    top: 60%;
+    top: 60%px;
     left: 7px;
     position: absolute;
     z-index: 10000;
@@ -93,7 +93,7 @@
     border-radius: 8px;
 
     .btns-top-modal {
-        padding: 8px;
+        padding: 3px;
 
         .btn-modal-top-section {
             cursor: pointer;
@@ -111,33 +111,37 @@
         }
     }
 
-    .btn-modal-color {
-        cursor: pointer;
-        padding: 8px;
-        border-radius: 4px;
-        color: rgb(50, 51, 56);
-        display: flex;
-        align-items: center;
-        font-size: 14px;
-        font-family: Roboto;
+    .btns-bottom-modal {
+        padding: 3px;
 
-        &:hover {
-            background-color: #e6e9ef;
+        .btn-modal-color {
+            cursor: pointer;
+            padding: 5px;
+            border-radius: 4px;
+            color: rgb(50, 51, 56);
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            font-family: Roboto;
+
+            &:hover {
+                background-color: #e6e9ef;
+            }
         }
-    }
 
-    .btn-modal-remove {
-        cursor: pointer;
-        padding: 8px;
-        border-radius: 4px;
-        color: rgb(50, 51, 56);
-        display: flex;
-        align-items: center;
-        font-size: 14px;
-        font-family: Roboto;
+        .btn-modal-remove {
+            cursor: pointer;
+            padding: 8px;
+            border-radius: 4px;
+            color: rgb(50, 51, 56);
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            font-family: Roboto;
 
-        &:hover {
-            background-color: #e6e9ef;
+            &:hover {
+                background-color: #e6e9ef;
+            }
         }
     }
 }
