--- a/src/assets/styles/cmps/_cell-title.scss
+++ b/src/assets/styles/cmps/_cell-title.scss
@@ -133,17 +133,17 @@
 }
 
 .detailes-main-modal-wrapper {
-    // position: fixed;
-    // flex-wrap: nowrap;
-    // display: flex;
-    // flex-direction: column;
-    // background-color: rgb(255, 255, 255);
-    // box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 17px 6px;
-    // color: rgb(50, 51, 56);
-    // height: 657px;
-    // right: 0;
-    // top: 0;
-    // width: 560px;
+    position: fixed;
+    flex-wrap: nowrap;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 17px 6px;
+    color: rgb(50, 51, 56);
+    height: 657px;
+    right: 0;
+    top: 0;
+    width: 560px;
 
     .activity-header {
         padding: 20px;
@@ -161,6 +161,64 @@
             line-height: 26px;
             min-height: 25px;
             cursor: default;
+        }
+
+        .activity-btns {
+            display: flex;
+            align-items: center;
+            border-bottom: 1px solid #efefef;
+
+            .activity-btn-update {
+                border-bottom: 2px solid #0073ea;
+                margin-right: 10px;
+                padding: 0 8px 8px;
+                font-size: .875rem;
+            }
+
+            .activity-btn-log {
+                margin-right: 10px;
+                padding: 0 8px 8px;
+                font-size: .875rem;
+            }
+        }
+    }
+
+    .main-body-modal {
+        padding: 20px;
+        flex: 1 1 auto;
+        overflow: scroll;
+        position: relative;
+
+        .item-update-content {}
+    }
+}
+
+.task-modal-menu {
+    width: 264px;
+    top: 30px;
+    left: -24px;
+    position: absolute;
+    z-index: 100;
+    box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
+    background-color: #fff;
+    border-radius: 8px;
+
+    .task-btns-modal-open {
+        padding: 8px;
+
+        .task-btn-crud {
+            cursor: pointer;
+            padding: 8px;
+            border-radius: 4px;
+            color: rgb(55, 56, 50);
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            font-family: Roboto;
+
+            &:hover {
+                background-color: #e6e9ef;
+            }
         }
     }
 }
