--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -2,3 +2,8 @@
     font-family: Roboto;
     src: url(../../fonts/Roboto-Light.ttf);
 }
+
+@font-face {
+    font-family: Roboto-Bold;
+    src: url(../../fonts/Roboto-Bold.ttf);
+}
