--- a/src/assets/styles/cmps/_cell.scss
+++ b/src/assets/styles/cmps/_cell.scss
@@ -19,4 +19,8 @@
     color: #323338;
     color: var(--primary-text-color);
     position: relative;
+
+    &.date {
+        overflow: visible;
+    }
 }
