--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -21,3 +21,13 @@
         }
     }
 }
+
+.cell-component {
+
+    overflow: visible;
+
+    .date-column {
+        position: relative;
+
+    }
+}
