--- a/src/assets/styles/cmps/_cell-title.scss
+++ b/src/assets/styles/cmps/_cell-title.scss
@@ -197,8 +197,8 @@
 
 .task-modal-menu {
     width: 264px;
-    top: 30px;
-    left: -24px;
+    // top: 67px;
+    left: 5px;
     position: absolute;
     z-index: 100;
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
