--- a/src/assets/styles/cmps/_cell.scss
+++ b/src/assets/styles/cmps/_cell.scss
@@ -15,7 +15,7 @@
     font-weight: 400;
     border-right: 1px solid;
     border-right-color: #fff;
-
+    min-width: 140px;
     color: #323338;
     color: var(--primary-text-color);
     position: relative;
