--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -1,4 +1,6 @@
 .home-container {
+    background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6_KBn7ufz8Byry3bHurnQm_lV0p0he53-dA&usqp=CAU);
+
     .main-header {
         margin: 0 auto;
         height: 72px;
