--- a/src/assets/styles/cmps/_cell-title.scss
+++ b/src/assets/styles/cmps/_cell-title.scss
@@ -210,19 +210,22 @@
     .task-btns-modal-open {
         padding: 8px;
 
-        .task-btn-crud {
-            cursor: pointer;
-            padding: 8px;
-            border-radius: 4px;
-            color: rgb(55, 56, 50);
-            display: flex;
-            align-items: center;
-            font-size: 14px;
-            font-family: Roboto;
 
-            &:hover {
-                background-color: #e6e9ef;
-            }
-        }
+    }
+}
+
+.task-btn-crud {
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 4px;
+    color: rgb(55, 56, 50);
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    font-family: Roboto;
+    border-bottom: black;
+
+    &:hover {
+        background-color: #e6e9ef;
     }
 }
