done columns crud

--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -7,6 +7,11 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
+
+    .date-picker {
+        position: absolute;
+        z-index: 25;
+    }
 }
 
 
