--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -12,6 +12,25 @@
         position: absolute;
         z-index: 25;
     }
+
+    position: relative;
+
+    &::before {
+        content: "";
+        transition: border-width .3s .2s ease;
+        position: absolute;
+        top: 0;
+        right: 1px;
+        border-style: solid;
+        border-color: rgba(0, 0, 0, .2) white;
+        border-width: 0;
+    }
+
+    &:hover {
+        &::before {
+            border-width: 0 10px 10px 0;
+        }
+    }
 }
 
 
