H user and full back to workspac page

--- a/src/assets/styles/cmps/board-controller.scss
+++ b/src/assets/styles/cmps/board-controller.scss
@@ -289,6 +289,14 @@
     height: 406px;
     position: relative;
 
+
+    a:hover {
+        .board-dropdown-menu::after {
+            content: "⋯";
+        }
+
+    }
+
     a:hover:not(.active) {
         .board-preview-card {
             background-color: #e6e9ef;
