--- a/src/assets/styles/cmps/activity.scss
+++ b/src/assets/styles/cmps/activity.scss
@@ -8,7 +8,7 @@
     right: 0;
     top: 0;
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
-    background-color: #fff;
+    background-color: #ffffff;
     z-index: 10;
 
     // .slide-log-panel {
@@ -53,7 +53,33 @@
             .single-activity {
                 width: 100%;
                 align-items: center;
-                // flex-direction: column;
+
+                .activity-box {
+                    width: 100%;
+                    height: 39px;
+                    font-size: .875rem;
+                    padding: 0 8px 0 16px;
+                    margin: 4px 0;
+                    justify-content: flex-start;
+                    position: relative;
+                    align-items: center;
+
+                    .activity-time {
+                        flex-basis: 56px;
+                        color: #676879;
+                        grid-gap: 3px;
+                        gap: 3px;
+                        align-items: center;
+                        background-color: rgb(230, 119, 16);
+                    }
+
+                    .activity-member {
+                        flex: 0.8 0;
+                        grid-gap: 8px;
+                        gap: 8px;
+                        align-items: center;
+                    }
+                }
             }
 
         }
@@ -61,3 +87,7 @@
 
     // }
 }
+
+// #root>main>div>section>section>div>div>div.board-header>div.activity-log-panel.flex>div.activity-log-wrapper.flex.column {
+//     background-color: aqua;
+// }
