--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -1,5 +1,5 @@
 .home-container {
-    background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6_KBn7ufz8Byry3bHurnQm_lV0p0he53-dA&usqp=CAU);
+    background: url();
 
     .main-header {
         margin: 0 auto;
