--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -94,6 +94,7 @@
         width: 264px;
         top: 100%;
         right: 0;
+        z-index: 35;
 
         .item-member-list {
             justify-content: flex-start;
