--- a/src/assets/styles/cmps/_task-column.scss
+++ b/src/assets/styles/cmps/_task-column.scss
@@ -98,9 +98,11 @@
 }
 
 .menu-modal {
-    position: fixed;
-    right: 100px;
-    z-index: 90;
+    position: relative;
+    right: 6px;
+    right: 24px;
+    z-index: 1;
+    width: 195px;
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
     background-color: #fff;
     border-radius: 8px;
