--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -25,6 +25,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #fff;
+    font-weight: bold;
     // overflow: hidden;
     // background-color: $clr2;
 
