--- a/src/assets/styles/cmps/_cell-title.scss
+++ b/src/assets/styles/cmps/_cell-title.scss
@@ -5,7 +5,13 @@
     left: 46px;
     z-index: 10;
     display: flex;
+
     // flex: 1 1 auto;
+    &:hover {
+        .title-cell-component {
+            color: #0073ea;
+        }
+    }
 
     .title-inner-container {
         background-color: #f5f6f8d4;
@@ -52,7 +58,7 @@
         padding: 0px 3px;
         content: '▾';
         border-radius: 5px;
-        margin-left: 6px; //
+        margin-left: 6px; 
     }
 
 }
@@ -63,7 +69,8 @@
     padding: 0 10px 0 0;
     height: 100%;
     text-align: left;
-
+    font-weight: bold;
+    
     .pulse-left-indicator {
         background-color: rgb(87, 155, 252);
         color: rgb(87, 155, 252);
@@ -72,7 +79,7 @@
         transition: flex-basis .1s ease-in;
         position: relative;
     }
-
+    
     .title-component {
         height: 24px;
         display: flex;
@@ -83,9 +90,9 @@
         line-height: 23px;
         text-decoration: none;
         color: #323338;
-        color: var(--primary-text-color);
         font-weight: 400;
         font-size: 13px;
+
 
         .edit-icon-wrapper {
             display: none;
@@ -108,6 +115,8 @@
                 padding-top: 2px;
             }
         }
+
+
     }
 
     .conversation-indicator-component {
