--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -7,3 +7,13 @@
     font-family: Roboto-Bold;
     src: url(../../fonts/Roboto-Bold.ttf);
 }
+
+@font-face {
+    font-family: Roboto-Bold-light;
+    src: url(../../fonts/Roboto/Roboto-Regular.ttf)
+}
+
+@font-face {
+    font-family: Roboto-light;
+    src: url(../../fonts/Roboto/Roboto-Light.ttf)
+}
