--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -72,6 +72,13 @@
                             padding: 4px 8px;
                             cursor: pointer;
 
+                            span {
+                                font-weight: 400;
+                                margin: 0;
+                                font-family: Roboto;
+                                padding-left: 8px;
+                            }
+
                             &:hover {
                                 background-color: #ece7e7;
                                 border-radius: 4px;
