--- a/src/assets/styles/cmps/activity.scss
+++ b/src/assets/styles/cmps/activity.scss
@@ -48,8 +48,9 @@
         padding: 0 25px;
         overflow-y: scroll;
         width: 100%;
-        justify-content: center;
         align-items: center;
+        // overflow: hidden;
+
 
         .single-activity {
             width: 100%;
@@ -58,8 +59,8 @@
             .activity-box {
                 width: 100%;
                 height: 39px;
-                font-size: .875rem;
-                padding: 0 8px 0 16px;
+                font-size: 0.875rem;
+                padding: 0 -1px 0 16px;
                 margin: 4px 0;
                 justify-content: flex-start;
                 position: relative;
@@ -69,14 +70,15 @@
                     flex-basis: 56px;
                     color: #676879;
                     grid-gap: 3px;
-                    gap: 3px;
+                    gap: 10px;
                     align-items: center;
+                    margin-right: 13px;
                 }
 
                 .activity-member {
-                    flex: 0.8 0;
+                    // flex: 0.8 0;
                     grid-gap: 8px;
-                    gap: 8px;
+                    gap: 20px;
                     align-items: center;
 
                     img {
