--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -101,8 +101,8 @@
     position: relative;
     right: 6px;
     right: 24px;
-    z-index: 1;
-    width: 195px;
+    z-index: 20;
+    width: 264px;
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
     background-color: #fff;
     border-radius: 8px;
@@ -125,8 +125,16 @@
                 height: 22px;
                 background-color: #cce5ff;
                 border-radius: 24px;
-                align-items: center;
                 justify-content: center;
+                align-items: center;
+
+                img {
+                    align-items: center;
+                    justify-content: center;
+                    width: 22px;
+                    margin-right: 4px;
+                    border-radius: 50%;
+                }
 
                 .svg {
                     background-color: inherit;
