--- a/src/assets/styles/cmps/_cell.scss
+++ b/src/assets/styles/cmps/_cell.scss
@@ -1,16 +1,11 @@
 .column-cell-wrapper {
-    display: flex;
-    justify-content: space-around;
+    // display: flex;
+    // justify-content: space-around;
     // width: 200px;
     // background-color: rgb(46, 26, 163);
 
 }
 
-.cell-component-inner {
-    // background-color: chartreuse;
-
-
-}
 
 .cell-component {
     height: 35px;
@@ -38,6 +33,8 @@
     &.date {
         overflow: visible;
     }
+
+    &.persons {}
 
     &.group-column {
         background-color: #fff;
