--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -70,11 +70,11 @@
 
 .column-modal {
     background-color: white;
-    width: 160px;
-    padding: 5px;
+    width: 100%;
+    padding: 7px;
     position: relative;
-    right: 7px;
-    border-radius: 2px;
+    // right: 7px;
+    border-radius: 1px;
     z-index: 15;
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
 
@@ -98,10 +98,11 @@
 }
 
 .menu-modal {
-    position: relative;
-    right: 6px;
-    right: 24px;
-    z-index: 1;
+    position: absolute;
+    z-index: 3;
+    // right: 6px;
+    // right: 24px;
+
     width: 195px;
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
     background-color: #fff;
@@ -109,6 +110,7 @@
 
 
     .person-menu {
+        // position: absolute;
         width: 264px;
         top: 100%;
         right: 0;
