--- a/src/assets/styles/cmps/task-preview.scss
+++ b/src/assets/styles/cmps/task-preview.scss
@@ -72,8 +72,8 @@
     width: 8px;
     height: 100%;
     margin-left: 32px;
-    background-color: rgb(87, 155, 252);
-    color: rgb(87, 155, 252);
+    background-color:  rgb(206, 206, 206);
+    // color: rgb(170, 170, 170);
 }
 
 .group-header-wrapper {
