--- a/src/assets/styles/cmps/board-controller.scss
+++ b/src/assets/styles/cmps/board-controller.scss
@@ -239,20 +239,13 @@
                 justify-content: center;
                 margin-left: 8px;
 
-
-
                 .lightning-img-wrapper {
                     height: 100%;
-
                     font-size: 16px;
                     transition: background-color 100ms ease;
-
                     position: relative;
                     display: flex;
                 }
-
-
-
             }
 
             &:hover {
@@ -278,8 +271,6 @@
         overflow-y: auto;
         overflow-x: hidden;
         position: relative;
-
-
     }
 }
 
@@ -289,25 +280,20 @@
     height: 406px;
     position: relative;
 
-
-    a:hover {
+    .board-preview:hover {
         .board-dropdown-menu::after {
             content: "⋯";
         }
-
     }
 
     a:hover:not(.active) {
         .board-preview-card {
             background-color: #e6e9ef;
-
-
         }
 
         .board-dropdown-menu::after {
             content: "⋯";
         }
-
     }
 
     .active {
@@ -330,10 +316,6 @@
         padding-right: 8px;
         padding-left: 12px;
 
-
-
-
-
         .board-preview-card {
             height: 100%;
             width: 100%;
@@ -347,7 +329,6 @@
                 display: flex;
                 align-items: center;
                 color: #323338;
-
             }
 
             .board-title-container {
@@ -362,8 +343,6 @@
                 line-height: 20px;
                 justify-content: space-between;
 
-                .board-title {}
-
                 .board-dropdown-menu {
                     text-align: center;
                     border-radius: 4px;
@@ -375,8 +354,6 @@
                     font-weight: 900;
                 }
             }
-
-            // background-color: #0085ff;
         }
     }
 }
