--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -12,7 +12,6 @@ html {
     // color: $clr3;
     line-height: 1.8;
     line-height: 1.5;
-
     // @media (max-width: 1300px) {
     //     font-size: 13px;
     // }
@@ -25,7 +24,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #fff;
-    font-weight: bold;
+    // font-weight: bold;
     // overflow: hidden;
     // background-color: $clr2;
 
