--- a/src/assets/styles/cmps/activity.scss
+++ b/src/assets/styles/cmps/activity.scss
@@ -9,7 +9,7 @@
     top: 0;
     box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
     background-color: #ffffff;
-    z-index: 10;
+    z-index: 40;
 
     // .slide-log-panel {
 
@@ -57,10 +57,11 @@
             align-items: center;
 
             .activity-box {
+                color: #676879;
                 width: 100%;
                 height: 39px;
-                font-size: 0.875rem;
-                padding: 0 -1px 0 16px;
+                font-size: .875rem;
+                /* padding: 0 8px 0 16px; */
                 margin: 4px 0;
                 justify-content: flex-start;
                 position: relative;
@@ -68,17 +69,13 @@
 
                 .activity-time {
                     flex-basis: 56px;
-                    color: #676879;
-                    grid-gap: 3px;
-                    gap: 10px;
                     align-items: center;
                     margin-right: 13px;
                 }
 
                 .activity-member {
                     // flex: 0.8 0;
-                    grid-gap: 8px;
-                    gap: 20px;
+                    grid-gap: 5px;
                     align-items: center;
 
                     img {
@@ -92,6 +89,7 @@
                     flex: 1.5 0;
                     grid-gap: 15px;
                     gap: 15px;
+                    margin-left: 20px;
                 }
 
                 .activity-info {
@@ -109,8 +107,11 @@
                         white-space: nowrap;
                         align-items: center;
                         justify-content: center;
+                        border-radius: 3px;
+                        color:rgb(255, 255, 255);
+                        font-size: 13px;
                     }
-
+                    
                     .to {
                         color: rgb(96, 96, 96);
                         width: 70px;
@@ -120,6 +121,9 @@
                         white-space: nowrap;
                         align-items: center;
                         justify-content: center;
+                        border-radius: 3px;
+                        color:rgb(255, 255, 255);
+                        font-size: 13px;
                     }
                 }
             }
