--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -7,6 +7,46 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        .add-member {
+            align-items: center;
+
+            .profile-icon svg {
+                height: 30px;
+                width: 30px;
+                border-radius: 50%;
+                border: 1px solid #c5c7d0;
+                margin: 0 -4px;
+                background-color: #f0f0f0;
+            }
+
+            .person-display-container {
+                display: flex;
+                align-items: center;
+
+                img {
+                    height: 30px;
+                    width: 30px;
+                    border-radius: 50%;
+                    border: 1px solid #c5c7d0;
+                    margin: 0 -4px;
+                    background-color: #fff;
+                }
+
+                .person-icon {
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #c5c7d0;
+                    color: #fff;
+                    font-weight: 700;
+                    height: 30px;
+                    width: 30px;
+                    border-radius: 50%;
+                    border: 1px solid #c5c7d0;
+                    margin: 0 -4px;
+                }
+            }
+        }
     }
 
 
@@ -26,6 +66,11 @@
     position: relative;
 
     &.task-column-status {
+        color: rgb(255, 255, 255);
+        font-weight: 600;
+        text-transform: capitalize;
+        font-size: 12px;
+
         &.green {
             background-color: rgb(0, 200, 117);
         }
@@ -61,10 +106,7 @@
     }
 }
 
-.person-display-container {
-    display: flex;
-    align-items: center;
-}
+
 
 
 
@@ -82,6 +124,10 @@
         border: none;
         margin: 2px;
 
+        .none {
+            height: 100%;
+            width: 100%;
+        }
 
         .btn-wraper {
             // z-index: 18;
