--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -1,7 +1,8 @@
 .home-container {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(#031326, #031326, #072B59);
+    // background: linear-gradient(#031326, #031326, #072B59);
+    background: linear-gradient(rgb(0, 1, 51) 0%, rgb(15, 16, 72) 100%);
     // change to animation wite stars
 
     .main-header {
@@ -34,12 +35,12 @@
                     align-items: center;
 
                     .logo-title {
-                        font-size: 50px;
-                        font-family: Roboto-Bold;
+                        font-size: 40px;
+                        font-family: poppins-bold;
                     }
 
                     .logo-img {
-                        width: 50px;
+                        width: 40px;
                         margin-right: 16px;
                     }
                 }
@@ -63,7 +64,7 @@
 
                 .login {
                     color: inherit;
-                    font-family: Roboto;
+                    font-family: poppins-light;
                     text-decoration: none;
                     line-height: 1
                 }
@@ -72,7 +73,7 @@
                     color: #fff;
                     background-color: #4353ff;
                     border-radius: 40px;
-                    font-family: Roboto-Bold;
+                    font-family: poppins-light;
                     border: none;
                     padding: 8px 16px;
                     margin-left: 32px;
@@ -99,7 +100,6 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                font-family: Roboto;
 
                 .head-line {
                     padding: 40px 32px 24px;
@@ -107,31 +107,31 @@
                     .head-line-title {
                         font-size: 4.5rem;
                         line-height: 72px;
-                        font-family: Roboto-Bold-light; //sofia
-                        color: #323338;
+                        font-family: poppins; //sofia
+                        color: #e6e6ed;
                         padding-bottom: 30px;
                         word-break: break-word;
                         margin-bottom: 16px;
                         text-align: center;
                         font-weight: 400;
                         margin: 0;
-                        font-size: 72px;
-                        background: -webkit-linear-gradient(#eee, #333);
+                        // font-size: 72px;
+                        background: -webkit-linear-gradient(#eee, rgb(161, 161, 161));
                         -webkit-background-clip: text;
                         -webkit-text-fill-color: transparent;
                     }
 
                     .head-line-title-sub {
-                        font-family: Roboto-light; // sofia
+                        font-family: poppins-medium; // sofia
                         font-size: 24px;
                         line-height: 40px;
-                        color: #323338;
+                        color: #e6e6ed;
                         padding-bottom: 30px;
                         word-break: break-word;
                         text-align: center;
                         font-weight: 400;
                         margin: 0;
-                        background: -webkit-linear-gradient(#eee, #333);
+                        background: -webkit-linear-gradient(#eee, rgb(161, 161, 161));
                         -webkit-background-clip: text;
                         -webkit-text-fill-color: transparent;
                     }
@@ -144,7 +144,7 @@
                     // background-color: #4353ff;
                     border-radius: 40px;
                     border: none;
-                    font-family: Roboto-Bold;
+                    font-family: poppins-light;
                     padding: 11px 48px;
                     transition: all .3s ease;
                     display: flex;
