--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -128,7 +128,7 @@
             font-family: Roboto-thin;
 
             .color-pick {
-                background-color: aqua;
+                background-color: rgb(87, 155, 252);
                 border-radius: 50%;
                 width: 10px;
                 height: 10px;
