--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -3,6 +3,9 @@
 
     .cell-component {
         border-bottom: none;
+        text-transform: capitalize;
+        color: #676879;
+
     }
 
     .group-title-wrapper {
