--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -66,7 +66,15 @@
                     color: inherit;
                     font-family: poppins-light;
                     text-decoration: none;
-                    line-height: 1
+                    line-height: 1;
+                }
+
+                .signup {
+                    color: inherit;
+                    font-family: poppins-light;
+                    text-decoration: none;
+                    line-height: 1;
+                    margin-left: 12px;
                 }
 
                 .started-btn {
