--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -73,6 +73,7 @@
                         .invite {
                             padding: 4px 8px;
                             cursor: pointer;
+                            color: #323338;
 
                             span {
                                 font-weight: 400;
@@ -93,6 +94,7 @@
                             padding: 4px 8px;
                             margin-left: 16px;
                             cursor: pointer;
+                            color: #323338;
 
 
                             &:hover {
@@ -102,26 +104,38 @@
                             }
                         }
 
-                        .add-to-board {
-                            margin-left: 16px;
+                        .add-board-container {
+                            margin: 0;
+                            padding: 0;
+                            border: 0;
+                            font-size: 100%;
+                            vertical-align: baseline;
                             border: 1px solid #c5c7d0;
-                            padding: 3px 3px;
-                            height: 26px;
-                            cursor: pointer;
-                            border-radius: 2px;
-                            font-size: 14px;
+                            border-radius: 5px;
+
+                            .add-to-board {
+                                margin-left: 4px;
+                                padding: 3px 3px;
+                                height: 26px;
+                                cursor: pointer;
+                                border-radius: 2px;
+                                font-size: 14px;
+                                color: #323338;
 
 
-                            &:hover {
-                                background-color: #ece7e7;
-                                border-radius: 4px;
+                                &:hover {
+                                    background-color: #ece7e7;
+                                    border-radius: 4px;
 
+                                }
                             }
                         }
 
                         .edit {
                             padding: 4px 8px;
                             margin-left: 16px;
+                            color: #323338;
+
                         }
                     }
                 }
@@ -183,6 +197,13 @@
 
     h1 {
         margin-top: 10px;
+
+        span {
+            font-weight: 400;
+            margin: 0;
+            font-family: Roboto;
+            padding-left: 8px;
+        }
     }
 
     .invite-input {
