--- a/src/assets/styles/cmps/task-column.scss
+++ b/src/assets/styles/cmps/task-column.scss
@@ -59,8 +59,9 @@
     }
 
     .date-picker {
-        position: relative;
+        position: absolute;
         z-index: 25;
+        box-shadow: 0 4px 17px 6px rgb(0 0 0 / 10%);
     }
 
     position: relative;
