--- a/src/assets/styles/cmps/_progress-bar.scss
+++ b/src/assets/styles/cmps/_progress-bar.scss
@@ -1,7 +1,6 @@
-.group-progress {
+.progres-bar-position {
     height: 40px;
     padding-left: 30px;
-    // position: absolute;
 
     .empty-cell {
         height: 100%;
@@ -11,12 +10,19 @@
         left: 0;
         z-index: 2;
         background-color: rgba(253, 253, 250, .95);
-        // min-width: 180px;
-        min-width: 737px;
+        min-width: 180px;
+    }
+    .empty-cell-nums{
+        height: 100%;
+        min-width: 150px;
+    }
+    .empty-cell-date{
+        height: 100%;
+        min-width: 120px;
     }
 
     .progress-display {
-        min-width: 150px;
+        width: 150px;
         height: auto;
         height: 100%;
         background-color: #f1f1f1;
