--- a/src/assets/styles/cmps/_progress-bar.scss
+++ b/src/assets/styles/cmps/_progress-bar.scss
@@ -1,6 +1,7 @@
 .progres-bar-position {
     height: 40px;
     padding-left: 30px;
+    margin-bottom: 70px;
 
     .empty-cell {
         height: 100%;
@@ -12,11 +13,13 @@
         background-color: rgba(253, 253, 250, .95);
         min-width: 180px;
     }
-    .empty-cell-nums{
+
+    .empty-cell-nums {
         height: 100%;
         min-width: 150px;
     }
-    .empty-cell-date{
+
+    .empty-cell-date {
         height: 100%;
         min-width: 120px;
     }
